# agentic-rag

./: .env  .gitignore  AGENTS.md  RAG_ADVANCED_PLAN.md  RAG_OPTIMIZATION_PLAN(completed).md  RAG_OPTIMIZATION_PLAN.md  README.md  pom.xml
bootstrap/: pom.xml
doc-parser-service/: download_models.py  main.py  pyproject.toml
doc-parser-service/app/: config.py  main.py
doc-parser-service/app/api/: health.py  parse.py
doc-parser-service/app/core/: base_parser.py  parser_factory.py  task_manager.py
doc-parser-service/app/engines/: deepdoc_engine.py  layout_engine.py  ocr_engine.py  table_engine.py
doc-parser-service/app/models/: response.py
doc-parser-service/app/processors/: excel_processor.py  image_processor.py  pdf_processor.py  ppt_processor.py  word_processor.py
doc-parser-service/app/utils/: model_downloader.py
docs/: DEEPDOC_DESIGN.md  DOCUMENT_PARSER_OPTIMIZATION_PLAN.md
framework/: pom.xml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: chat.ts  eval.ts  feedback.ts  knowledge.ts  observability.ts  trace.ts
frontend/src/components/: AddKbModal.tsx  AddModelModal.tsx  EvalView.tsx  KnowledgeBaseView.tsx  MessageContent.tsx  (+2 more)
infra-ai/: pom.xml
resources/databases/: init.sql  scheme.sql
scripts/: compare-rag-eval.ps1  run-rag-eval.ps1
scripts/eval/: README.md  build_real_eval_dataset.py  compare_rag_eval.py  convert_dureader.py  export_dureader_corpus.py  quick_eval.py  run_rag_eval.py  samples_example.json
scripts/pdf_pipeline/: main.py
(+309 files in other folders)
