[project]
name = "doc-parser-service"
version = "0.1.0"
description = "Intelligent document parsing service with deep learning support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "loguru>=0.7.0",
    "onnxruntime>=1.18.0",
    "opencv-python-headless>=4.10.0",
    "huggingface-hub>=0.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
ocr = [
    "paddlepaddle>=3.0.0",
    "paddleocr>=2.8.0",
]
gpu = [
    "onnxruntime-gpu>=1.18.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
